Initialize chats and messaging_app packages, update Dockerfile and docker-compose, add .gitignore and requirements.txt

--- a/messaging_app/messaging_app/Dockerfile
+++ b/messaging_app/messaging_app/Dockerfile
@@ -1,11 +1,22 @@
 FROM python:3.10
 
+# Set working directory inside the container
 WORKDIR /app
 
-COPY .. .
+# Add /app to Python path
+ENV PYTHONPATH=/app
 
-RUN pip install -p --no-cache-dir -r requirements.txt
+# Install dependencies
+COPY messaging_app/requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
+COPY messaging_app/ messaging_app/
+COPY chats/ chats/
+COPY manage.py .
+
+# Expose Django's default port
 EXPOSE 8000
 
+# Run the Django development server
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
